--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile group: 'org.dom4j', name: 'dom4j', version: '2.1.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
